# RLMolLM

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  benchmark_tdc.py  benchmark_tdc_optimization.py  build_initial_population_ns.sh  build_initial_population_s.sh  check_validity.py  download_assets.py  environment.yml  extract_smiles.py  generate_with_best_model.py  inference.py  install_pip_only.sh  note.txt  optimize_liten_admet.py  optimize_two_checkpoints.py  pyproject.toml  requirement.txt  requirements.txt  run_inference_ns_random.sh  run_inference_s.sh  run_property_analysis_ns_random.sh  run_property_analysis_s.sh  smiles_to_chars.py  test_all_77_properties.py  test_all_77_properties_results.json  test_all_new_properties.py  test_herg.py  test_melting_point.py  test_molecules_optimization.py  test_normalize_debug.py  test_pka_debug.py  test_pka_direct.py  test_pka_fix.py  test_pka_range.py  test_regression_zeros.py  test_tox21_all.py  (+6 more)
analysis/: property_analysis_rl.py  property_comparison_plot.py  umap_color.py  umap_plot.py
assets/: README.md
assets/configs/: admet_liten.json  comparison.json  gdb.json  guacamol.json  moses.json  zinc.json
assets/initial_populations/: .gitkeep
config/: no_scaffold_2_random.json
config/admet_options/: options.json  options_range.json
config/scaffold_examples/: scaffold_6_benzene.json  scaffold_7_dihydropyridine.json  scaffold_8_benzothiophene.json
data/: example_smiles.tsv
download_script/: download_model_weights.py
models/: gan.py  generator.py
models/rl/: README.md  __init__.py  ppo_trainer.py
population/: __init__.py  population.py
rlmollm/: __init__.py  config.py  generator.py  token_splits.py
rlmollm/models/: __init__.py  discriminator.py  gan.py  generator.py
rlmollm/models/rl/: MoleculeValueNetwork.py  README.md  __init__.py  ppo_trainer.py  ppo_trainer_optimized.py
rlmollm/population/: population.py
rlmollm/scaffold/: scaffold_handler.py
rlmollm/scoring/: admet_scoring.py  linker_scoring.py  liten_admet_scoring.py  molecule_scoring.py  property_configs.py  scoring_interface.py  sklearn_compat.py  tdc_multi_oracle_scoring.py  tdc_oracle_scoring.py
rlmollm/utils/: chiral_utils.py  sample_util.py  token_distributions copy.py  token_distributions.py  training_utils.py  util.py
scaffold/: scaffold_handler.py
scoring/: admet_scoring.py  linker_scoring.py  molecule_scoring.py
tests/: conftest.py  test_admet_opt.py  test_auto_load_properties.py  test_multi_property.py  test_outputs.py  test_scaffold.py
tokenizer/: config.json  vocab.txt
tokenizer/models--ibm--MoLFormer-XL-both-10pct/snapshots/default/: config.json
utils/: training_utils.py  util.py
