[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlmollm"
version = "0.1.0"
description = "Reinforcement Learning-Enhanced Language Model Framework for Inverse Molecular Design"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RLMolLM Team"},
]
keywords = ["molecular-design", "drug-discovery", "reinforcement-learning", "deep-learning", "chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies (only what rlmollm actually uses)
dependencies = [
    "torch>=2.4.0",
    "torch-geometric>=2.5.0",  # Required for LiTEN ADMET scoring
    "transformers>=4.50.0",
    "numpy>=1.24.3",
    "rdkit>=2024.3.3",
    "admet-ai>=1.3.1",  # Optional, for ADMET scoring (lazy loaded)
    "pandas>=2.1.4",
    "scipy>=1.14.0",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
# Visualization/analysis tools (not used by core rlmollm)
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
]

# API server dependencies (not part of core library)
api = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/rlmollm"
Repository = "https://github.com/your-org/rlmollm"
Issues = "https://github.com/your-org/rlmollm/issues"

[tool.setuptools]
packages = ["rlmollm"]

[tool.setuptools.package-data]
rlmollm = ["**/*.json", "**/*.pkl.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = []

